# vscode-uroborosql-fmt

./: .eslintignore  .eslintrc.js  .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  renovate.json  tsconfig.json  uroborosql-fmt-napi-0.0.0.tgz
.changeset/: config.json  curvy-students-fry.md  eighty-pets-flash.md  gentle-flies-own.md  good-chicken-check.md  green-scissors-complain.md  lemon-items-nail.md  popular-doors-film.md  shy-seahorses-push.md  silver-seals-confess.md  soft-dolphins-cheat.md  strong-needles-joke.md  three-experts-reflect.md  tidy-candles-kiss.md  tricky-scissors-complain.md  update-napi-1-1-0.md  wise-timers-cheat.md
.github/: renovate.json
.github/workflows/: ci.yml  publish.yml  release.yml  update-napi-version.yml
client/: package-lock.json  package.json  tsconfig.json
client/multirootFixture/: multi.code-workspace
client/src/: command.ts  extension.ts  formattingStatus.ts  status.ts
client/src/test/: codeAction.test.ts  (+17 more)
client/testFixture/: .uroborosqllintrc.json  embedded-invalid-sql.ts  embedded.ts  format-range.txt  format.sql  whole-document-as-sql.txt
demo/: for_readme.sql
scripts/: dummy-publish.mjs  e2e-multiroot.sh  e2e.sh
server/: download-uroborosql-fmt-napi.mjs  package-lock.json  package.json  tsconfig.json  uroborosql-fmt-napi-0.0.0.tgz
server/src/: server.ts  uroborosql-fmt-napi.d.ts
uroborosql-fmt-napi/: Cargo.toml  index.d.ts  index.js  package.json  test.ts
uroborosql-fmt-napi/.github/workflows/: CI.yml
uroborosql-fmt-napi/src/: lib.rs
(+9 files in other folders)
