[package]
edition = "2021"
name = "uroborosql-fmt-napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.0", default-features = false, features = ["napi4"] }
napi-derive = "2.9.1"
itertools = "0.10.3"
tree-sitter = "~0.20.3"

# git config --global core.longpaths true を管理者権限で実行しないといけない
tree-sitter-sql = {git = "https://gitlab.nasa.future.co.jp/oss-incubate/rust-sql-formatter/tree-sitter-sql"}
uroborosql-fmt = {git = "https://gitlab.nasa.future.co.jp/oss-incubate/rust-sql-formatter/uroborosql-fmt"}

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
